<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/set_alert"
        android:orderInCategory="100"
        android:title="@string/setAlert"/>
<!--     <item 
        android:title="@string/back" 
        android:showAsAction="ifRoom|withText" 
        android:orderInCategory="100" 
        android:id="@+id/back"/>
	<item 
	    android:title="@string/exit" 
	    android:showAsAction="ifRoom|withText" 
	    android:orderInCategory="100" 
	    android:id="@+id/exit"/> -->

	<item 
	    android:title="@string/writenote"
	    android:orderInCategory="100"
	    android:id="@+id/writeNote"/>
	
	<item 
	    android:title="@string/sharedream"
	    android:orderInCategory="100"
	    android:id="@+id/sharedream"/>
	<item 
	    android:id="@+id/it_search"
	    android:orderInCategory="100"
	    android:title="@string/search"/>
	
</menu>