<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/login_bg" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:background="#C0C0C0" >

        <TextView
            android:id="@+id/tv_persist"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/persist"
            android:textColor="#000000"
            android:textSize="20.0dip" />

        <TextView
            android:id="@+id/tv_note"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="#000000"
            android:textSize="20.0dip" />

        <TextView
            android:id="@+id/tv_share"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/sharedream"
            android:textColor="#000000"
            android:textSize="20.0dip" />

        <TextView
            android:id="@+id/tv_my"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="#000000"
            android:textSize="20.0dip" />
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/vp_dt"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center">
        
    </android.support.v4.view.ViewPager>

</LinearLayout>